bugfix: IME on mobile

--- a/client/less/response.less
+++ b/client/less/response.less
@@ -11,6 +11,13 @@
     height: 100px;
     padding-top: 10px;
   }
+  .app_nav {
+    height: 60px;
+    overflow: hidden;
+    overflow-x: scroll;
+    white-space: nowrap;
+    max-width: 100%;
+  }
   .app_nav li a {
     padding: 10px;
     font-size: 14px;
